Upgrade other libs and resolve issues with impl, bump java version to 21